fixed spacing issue on event page

--- a/app/css/less/events.less
+++ b/app/css/less/events.less
@@ -166,6 +166,12 @@
 			}
 		}
 	}
+
+	.eventInfo {
+		.eventInfoText {
+			margin-bottom: 40px;
+		}
+	}
 	
 	section:nth-of-type(odd) {
 		background-color: #e6e6e6;
